--- a/Dyplom/streszczenie.tex
+++ b/Dyplom/streszczenie.tex
@@ -12,18 +12,18 @@
 %%%Nam id nulla a adipiscing tortor, dictum ut, lobortis urna. Donec non dui. Cras tempus orci ipsum, molestie quis, lacinia varius nunc, rhoncus purus, consectetuer congue risus. 
 %\mbox{}\vspace{2cm} % można przesunąć, w zależności od długości streszczenia
 \begin{abstract}
-Praca inżynierska dotyczy projektu aplikacji wspierającej działanie eBOK dla spółdzielni mieszkaniowych. Celem pracy jest opracowanie systemu, który umożliwia automatyzację komunikacji między spółdzielnią a mieszkańcami, zapewniając jednocześnie bezpieczeństwo danych i elastyczność w dostępie do informacji. Projektowana aplikacja pozwala na przeglądanie umów, rozliczeń, zgłoszeń oraz komunikatów, a także na wykonywanie płatności online, wszystko w intuicyjnym i przyjaznym dla użytkownika środowisku.
+Praca inżynierska dotyczy projektu aplikacji internetowej przeznaczonej dla członków i administracji spółdzielni mieszkaniowych. Aplikacja ta pozwalać ma na automatyzację komunikacji między spółdzielnią a mieszkańcami, zapewniając jednocześnie bezpieczeństwo danych i elastyczność w dostępie do informacji. Powinna również dawać możliwość przeglądania umów, rozliczeń, zgłoszeń oraz komunikatów, a także na wykonywanie płatności online, wszystko w intuicyjnym i przyjaznym dla użytkownika środowisku.
 
-W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK, opisano założenia projektowe oraz wdrożenie aplikacji z wykorzystaniem frameworka Spring. Zawarto także opis zastosowanego stosu technologicznego, który obejmuje m.in. Spring Boot, Hibernate, Next.js oraz bazę danych PostgreSQL. Wynikiem pracy jest funkcjonalna aplikacja, która może zostać wdrożona w rzeczywistym środowisku, usprawniając codzienną obsługę mieszkańców i poprawiając efektywność działania spółdzielni.
+W pracy przedstawiono szczegółową analizę funkcjonalności systemów eBOK. Opisano przyjęte założenia projektowe oraz sposób implementacji, testowania i wdrożenie wynikowej aplikacji. Zaprezentowano też stos wykorzystanych technologii: Spring Boot, Hibernate, Next.js oraz bazę danych PostgreSQL. Powstała aplikacja może być wdrożona w rzeczywistym środowisku, usprawniając codzienną obsługę mieszkańców i poprawiając efektywność działania spółdzielni.
 \end{abstract}
 \mykeywords
 
 {
 \selectlanguage{english}
 \begin{abstract}
-The engineering thesis focuses on the development of an application supporting the eBOK for housing cooperatives. The aim of the project is to create a system that automates communication between the cooperative and its residents, ensuring data security and flexibility in accessing information. The designed application allows users to view contracts, invoices, reports, and announcements, as well as make online payments, all within an intuitive and user-friendly environment.
+The engineering work focuses on designing a Web application for members and the administration of housing cooperatives. The application allows communication automation between administration staff and residents, while ensuring data security and flexibility in accessing information. It should also provide the ability to view contracts, billing, notifications, and communications and to make payments online, all in an intuitive and user-friendly environment.
 
-The thesis includes a detailed analysis of eBOK system functionalities, design assumptions, and the application implementation using the Spring framework. The project leverages technologies such as Spring Boot, Hibernate, Next.js and a PostgreSQL database. The outcome of this work is a functional application that can be implemented in a real environment, improving the daily customer service for residents and enhancing the efficiency of the housing cooperative's operations.
+The work presents a detailed analysis of the functionality of electronic customer service. It describes the design assumptions made and how the resulting application was implemented, tested and deployed. It also presents the stack of technologies used: Spring Boot, Hibernate, Next.js and PostgreSQL database. The resulting application can be implemented in a working environment, improving the daily service of residents, and improving the efficiency of the cooperative.
 \end{abstract}
 \mykeywords
 }
