--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -7,6 +7,7 @@
 \begin{description}[labelwidth=*]
   \item [eBOK] (pl.\ \emph{Elektroniczne Biuro Obsługi Klienta})
   \item [IT] (ang.\ \emph{Information Technology})
+  \item [SMS] (ang.\ \emph{Short Message Service})
   \item [WWW] (ang.\ \emph{World Wide Web})
   \item [API] (ang.\ \emph{Application Programming Interface})
   \item [HTTPS] (ang.\ \emph{Hypertext Transfer Protocol Secure})
